--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1></h1>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+    <link rel="stylesheet" href="style.css" type="textcss">
+  </head>
+  <body>
+  <div id="title">
+<h1>Waldo Finds Himself</h1>
+</div>
+<hr>
+<br>
+<h2>Everyone always asks that dreaded question</h2>
+<br>
+<div id="people">
+<h2><span style="color:red">Where's Waldo?</span></h2>
+</div>
+<br>
+<h2>But the real question is</h2>
+<br>
+<h2>Has Waldo found himself?</h2>
+<br>
+<p>In this heartfelt tale of self-discovery, Waldo gains
+the courage and wisdom to not rely on other people to constantly try
+to find him, but rather, to go on a journey to find himself</p>
+<br>
+<br>
+<h1>Coming Soon To a Theater Near You</h1>
+<input type="text" name="email" placeholder="Email">
+<input type="submit" value="Find Yourself">
+
+  </body>
+</html>
