--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" type="textcss">
   </head>
   <body>
-  <div id="title">
+    <div class="background">
+      <img src="background.png" alt="background" width="100%" height="100%">
+    </div>
+    <div class= "content">
+      <div id="title">
 <h1>Waldo Finds Himself</h1>
 </div>
 <hr>
@@ -30,6 +34,6 @@ to find him, but rather, to go on a journey to find himself</p>
 <h1>Coming Soon To a Theater Near You</h1>
 <input type="text" name="email" placeholder="Email">
 <input type="submit" value="Find Yourself">
-
+</div>
   </body>
 </html>
