--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css" type="textcss">
   </head>
   <body>
-    <div class="background">
-      <img src="background.png" alt="background" width="100%" height="100%">
-    </div>
-    <div class= "content">
+   <div class= "content">
       <div id="title">
 <h1>Waldo Finds Himself</h1>
 </div>
@@ -26,9 +23,11 @@
 <br>
 <h2>Has Waldo found himself?</h2>
 <br>
+<div class="summary">
 <p>In this heartfelt tale of self-discovery, Waldo gains
 the courage and wisdom to not rely on other people to constantly try
 to find him, but rather, to go on a journey to find himself</p>
+</div>
 <br>
 <br>
 <h1>Coming Soon To a Theater Near You</h1>
