--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ to find him, but rather, to go on a journey to find himself</p>
 </div>
 <br>
 <br>
+<div class="comingsoon">
 <h1>Coming Soon To a Theater Near You</h1>
+</div
 <input type="text" name="email" placeholder="Email">
 <input type="submit" value="Find Yourself">
 </div>
