--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ to find him, but rather, to go on a journey to find himself</p>
 <br>
 <div class="comingsoon">
 <h1>Coming Soon To a Theater Near You</h1>
-</div
+</div>
 
 <input type="text" name="email" placeholder="Email">
 <input type="submit" value="Find Yourself">
