--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 <div id="people">
 <h2><span style="color:red">Where's Waldo?</span></h2>
 </div>
-
-
 <h2>But the real question is</h2>
 <h2>Has Waldo found himself?</h2>
 
@@ -28,11 +26,11 @@
 the courage and wisdom to not rely on other people to constantly try
 to find him, but rather, to go on a journey to find himself</p>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+<div class="india">
+  <img src="tajmahal.jpg" alt="TM">
+</div>
+
 <div class="comingsoon">
 <h1>Coming Soon To a Theater Near You</h1>
 </div>
