get correct changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ to find him, but rather, to go on a journey to find himself</p>
 </div>
 
 <div class="india">
-  <img src="tajmahal.jpg" alt="TM" style=>
+  <img src="tajmahal.jpg" alt="TM">
 </div>
 
 <div class="comingsoon">
