--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ to find him, but rather, to go on a journey to find himself</p>
 </div>
 
 <div class="india">
-  <img src="tajmahal.jpg" alt="TM" style=>
+  <img src="tajmahal.jpg" alt="TM" >
 </div>
 
 <div class="comingsoon">
@@ -36,7 +36,7 @@ to find him, but rather, to go on a journey to find himself</p>
 </div>
 
 <input type="text" name="email" placeholder="Email">
-<input type="submit" value="Find Yourself">
+<button type="submit" value="Find Yourself">
 </div>
   </body>
 </html>
