add more p tags

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 <div class="summary">
 <p>In this heartfelt tale of self-discovery, Waldo gains
 the courage and wisdom to not rely on other people to constantly try
-to find him, but rather, to go on a journey to find himself</p>
+to find him, but rather, to go on a journey to find himself.</p>
 </div>
-
 <div class="india">
   <img src="tajmahal.jpg" alt="TM" >
 </div>
@@ -35,7 +34,8 @@ to find him, but rather, to go on a journey to find himself</p>
 <h1>Coming Soon To a Theater Near You</h1>
 </div>
 <input type="text" name="email" placeholder="Email">
-<button type="submit" value="Find Yourself">
+<button type="submit" value="Submit">Find Yourself</button>
+<p>Follow Waldo as he travels to India to find himself</p>
 </div>
   </body>
 </html>
