change text color

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <h1>Waldo Finds Himself</h1>
 </div>
 <hr>
-<br>
 <h2>Everyone always asks that dreaded question</h2>
 <div id="people">
-<h2><span style="color:red">Where's Waldo?</span></h2>
+<h2><span style="color:white">Where's Waldo?</span></h2>
 </div>
-<h2>But the real question is</h2>
+<h2>But the real question is:</h2>
+
 <h2>Has Waldo found himself?</h2>
+<br>
 
 <div class="summary">
 <p>In this heartfelt tale of self-discovery, Waldo gains
@@ -35,12 +36,11 @@ to find him, but rather, to go on a journey to find himself.</p>
 <h1>Coming Soon To a Theater Near You</h1>
 </div>
 <input type="text" name="email" placeholder="Email">
-
 <button type="submit" value="Submit">Find Yourself</button>
+<div id="followwaldo">
 <p>Follow Waldo as he travels to India to find himself</p>
 </div>
-
-
+</div>
   </body>
 </html>
 
