--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ to find him, but rather, to go on a journey to find himself.</p>
 <button type="submit" value="Submit">Find Yourself</button>
 
 </div>
+<a href="sequel.html">Click here to see the sequel</a>
   </body>
 </html>
 
