--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@ to find him, but rather, to go on a journey to find himself.</p>
 <div id="followwaldo">
 <p>Follow Waldo as he travels to India to find himself</p>
 </div>
+<video width="400" controls>
+  <source src="waldofindshimself.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
 <div class="comingsoon">
-<h1>Coming Soon To a Theater Near You</h1>
+<h1><span style="color: red;">Coming Soon To a Theater Near You</span></h1>
 </div>
 
 <input type="text" name="email" placeholder="Email">
